--- a/Core/Core/templates/ADMIN/editar_cliente.html
+++ b/Core/Core/templates/ADMIN/editar_cliente.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="{% static 'resources/css/admin.css' %}">
+    <link rel="stylesheet" href="{% static 'resources/css/styles.css' %}">
     <link rel="icon" type="image/png" href="{% static 'resources/img/favicon.png' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11">
@@ -16,6 +17,9 @@
 {% include 'ADMIN/sidebar.html' %}
 
 <div class="content-wrapper">
+    <div class="center-content">
+        <h2 class="form-title">Editar Cliente</h2>
+        <br>
     <form method="post" id="editarClienteForm" class="formulario-editar">
         {% csrf_token %}
         <input type="hidden" name="documento" value="{{ cliente.Documento }}">
@@ -44,7 +48,9 @@
             <input type="text" id="id_direccion" name="direccion" value="{{ cliente.Direccion }}" required>
         </div>
         <button type="submit" class="btn-submit">Guardar Cambios</button>
+        <button type="button" class="btn boton-cancelar" onclick="window.location.href='{% url "ad_clientes" %}'">Cancelar</button>
     </form>
+</div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
