--- a/Core/Core/templates/ADMIN/servicios.html
+++ b/Core/Core/templates/ADMIN/servicios.html
@@ -18,7 +18,7 @@
 <div class="content-wrapper">
     <div class="center-content">
         <h2>Lista de Servicios</h2>
-        <input type="text" id="searchInput" placeholder="Buscar Servicio..." class="search-bar">
+        <input type="text" id="searchInput" placeholder="Buscar Servicios..." class="search-bar">
         
                 <div class="content-wrapper">
             <!-- Botón para abrir el formulario de agregar usuario -->
