--- a/Core/Core/templates/ADMIN/sidebar.html
+++ b/Core/Core/templates/ADMIN/sidebar.html
@@ -56,7 +56,7 @@
             <a href="{% url 'ad_factura'%}">
                 <i class="fa fa-credit-card fa-2x"></i>
                 <span class="nav-text">
-                   Factura
+                   Facturas
                 </span>
             </a>
         </li>
@@ -65,7 +65,7 @@
             <a href="{% url 'ad_empresas'%}">
                 <i class="fa fa-building fa-2x"></i>
                 <span class="nav-text">
-                   Empresa
+                   Empresas
                 </span>
             </a>
         </li>
@@ -76,7 +76,7 @@
            <a href="{% url 'logout' %}">
                  <i class="fa fa-power-off fa-2x"></i>
                 <span class="nav-text">
-                    Logout
+                    Cerrar Sesion
                 </span>
             </a>
         </li>  
