--- a/Core/Core/templates/ADMIN/editar_servicio.html
+++ b/Core/Core/templates/ADMIN/editar_servicio.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>Editar servicio</title>
     <link rel="stylesheet" href="{% static 'resources/css/admin.css' %}">
+    <link rel="stylesheet" href="{% static 'resources/css/styles.css' %}">
     <link rel="icon" type="image/png" href="{% static 'resources/css/admin.css' %}">
+    <link rel="stylesheet" href="{% static 'resources/css/admin.css' %}">
     <link rel="icon" type="image/png" href="{% static 'resources/img/favicon.png' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11">
@@ -18,6 +20,7 @@
 <div class="content-wrapper">
     <div class="center-content">
         <h2 class="form-title">Editar Servicio</h2>
+        <br>
         <form method="post" class="formulario-editar" id="editarUsuarioForm">
             {% csrf_token %}
             <input type="hidden" name="id_servicio" value="{{ servicio.id_servicios }}">
@@ -35,6 +38,7 @@
             </div>
             
             <button type="submit" class="btn-submit">Guardar Cambios</button>
+            <button type="button" class="btn boton-cancelar" onclick="window.location.href='{% url "ad_servicios" %}'">Cancelar</button>
         </form>
     </div>
 </div>
