--- a/Core/Core/templates/ADMIN/editar_tvehiculo.html
+++ b/Core/Core/templates/ADMIN/editar_tvehiculo.html
@@ -18,41 +18,25 @@
 
 <div class="content-wrapper">
     <div class="center-content">
-        <h2 class="form-title">Editar Usuario</h2>
+        <h2 class="form-title">Editar Tipo de Vehiculo</h2>
         <br>
         <form method="post" class="formulario-editar" id="editarUsuarioForm">
             {% csrf_token %}
-            <input type="hidden" name="documento" value="{{ usuario.Documento }}">
+            <input type="hidden" name="documento" value="{{ tvehiculo.id_tipo_vehiculo }}">
             <div class="form-group">
                 <label for="id_nombre">Nombre:</label>
-                <input type="text" id="id_nombre" name="nombre" value="{{ usuario.Nombre }}" required>
+                <input type="text" id="id_nombre" name="nombre" value="{{ tvehiculo.nombre }}" required>
             </div>
             <div class="form-group">
-                <label for="id_apellido">Apellido:</label>
-                <input type="text" id="id_apellido" name="apellido" value="{{ usuario.Apellido }}" required>
+                <label for="id_numero_ruedas">Numero de Ruedas:</label>
+                <input type="text" id="id_numero_ruedas" name="numero_ruedas" value="{{ tvehiculo.numero_ruedas }}" required>
             </div>
             <div class="form-group">
-                <label for="id_celular">Celular:</label>
-                <input type="text" id="id_celular" name="celular" value="{{ usuario.Celular }}" required>
-            </div>
-            <div class="form-group">
-                <label for="id_f_nacimiento">Fecha de Nacimiento:</label>
-                <input type="date" id="id_f_nacimiento" name="f_nacimiento" value="{{ usuario.F_Nacimiento }}" required>
-            </div>
-            <div class="form-group">
-                <label for="id_correo">Correo:</label>
-                <input type="email" id="id_correo" name="correo" value="{{ usuario.Correo }}" required>
-            </div>
-            <div class="form-group">
-                <label for="id_rol">Rol:</label>
-                <select id="id_rol" name="rol" required>
-                    <option value="">Seleccione rol</option>
-                    <option value="1" {% if usuario.Rol == 1 %} selected {% endif %}>Mecanico</option>
-                    <option value="2" {% if usuario.Rol == 2 %} selected {% endif %}>Administrador</option>
-                </select>
+                <label for="id_descripcion">Descripcion:</label>
+                <input type="text" id="id_descripcion" name="descripcion" value="{{ tvehiculo.descripcion }}" required>
             </div>
             <button type="submit" class="btn-submit">Guardar Cambios</button>
-            <button type="button" class="btn boton-cancelar" onclick="window.location.href='{% url "ad_usuarios" %}'">Cancelar</button>
+            <button type="button" class="btn boton-cancelar" onclick="window.location.href='{% url "ad_tvehiculos" %}'">Cancelar</button>
         </form>
     </div>
 </div>
@@ -70,28 +54,25 @@
             },
             body: JSON.stringify({
                 nombre: document.getElementById('id_nombre').value,
-                apellido: document.getElementById('id_apellido').value,
-                celular: document.getElementById('id_celular').value,
-                f_nacimiento: document.getElementById('id_f_nacimiento').value,
-                correo: document.getElementById('id_correo').value,
-                rol: document.getElementById('id_rol').value
+                numero_ruedas: document.getElementById('id_numero_ruedas').value,
+                descripcion: document.getElementById('id_descripcion').value,
             })
         })
         .then(response => {
             if (response.ok) {
                 Swal.fire({
                     icon: 'success',
-                    title: 'Usuario actualizado',
+                    title: 'Tipo de Vehiculo actualizado',
                     showConfirmButton: false,
                     timer: 1500
                 })
                 .then(() => {
-                    window.location.href = '{% url 'ad_usuarios' %}';
+                    window.location.href = '{% url 'ad_tvehiculos' %}';
                 });
             } else {
                 Swal.fire({
                     icon: 'error',
-                    title: 'Error al actualizar el usuario',
+                    title: 'Error al actualizar el tipo de vehiculo',
                     text: 'Por favor, intenta nuevamente',
                     showConfirmButton: true
                 });
