--- a/Core/Core/templates/ADMIN/editar_vehiculosa.html
+++ b/Core/Core/templates/ADMIN/editar_vehiculosa.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <link rel="stylesheet" href="{% static 'resources/css/admin.css' %}">
+    <link rel="stylesheet" href="{% static 'resources/css/styles.css' %}">
     <link rel="icon" type="image/png" href="{% static 'resources/img/favicon.png' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
@@ -15,6 +16,9 @@
 {% include 'ADMIN/sidebar.html' %}
 
 <div class="content-wrapper">
+    <div class="center-content">
+        <h2 class="form-title">Editar Vehiculo</h2>
+        <br>
     <form id="editarVehiculoForm" class="formulario-editar">
         {% csrf_token %}
         <input type="hidden" name="placa" value="{{ vehiculo.placa }}">
@@ -45,7 +49,10 @@
             </select>
         </div>
         <button type="submit" class="btn-submit">Guardar Cambios</button>
+        <button type="button" class="btn boton-cancelar" onclick="window.location.href='{% url "ad_vehiculosa" %}'">Cancelar</button>
+
     </form>
+</div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>
